--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@
 		width: 170px;
 		flex: 1;
 		position: relative;
+    justify-content: center;
 
 		.slider {
 			position: absolute;
@@ -35,7 +36,7 @@
 			}
 		}
 
-		.sliderText {
+		.slider-text {
 			display: none;
       color: black;
 
